Changes between 2.3.5 and 2.4.DEV
-----------------------------------

- integrate tab-completion on options through use of "argcomplete".
  Thanks Anthon van der Neut for the PR.

- pytest now uses argparse instead of optparse (thanks Anthon) which 
  means that "argparse" is added as a dependency if installing into python2.6
  environments or below.

- SO-17664702: call fixture finalizers even if the fixture function
  partially failed (finalizers would not always be called before)

- color the last line red or green depending if failures/errors occured
  or everything passed.  thanks Christian Theunert.

- fix issue320 - fix class scope for fixtures when mixed with
  module-level functions.  Thanks Anatloy Bubenkoff.

- you can specify "-q" or "-qq" to get different levels of "quieter"
  reporting (thanks Katarzyna Jachim)

- fix issue300 - Fix order of conftest loading when starting py.test
  in a subdirectory.

- fix issue323 - sorting of many module-scoped arg parametrizations

- add support for setUpModule/tearDownModule detection, thanks Brian Okken.

- make sessionfinish hooks execute with the same cwd-context as at
  session start (helps fix plugin behaviour which write output files 
  with relative path such as pytest-cov)

- fix issue316 - properly reference collection hooks in docs

- fix issue 308 - allow to mark/xfail/skip individual parameter sets
  when parametrizing.  Thanks Brianna Laugher.

- simplify parametrize() signature: allow to pass a CSV-separated string 
  to specify argnames.  For example: ``pytest.mark.parametrize("input,expected",  [(1,2), (2,3)])`` is possible now in addition to the prior
  ``pytest.mark.parametrize(("input", "expected"), ...)``.

- fix issue 306 - cleanup of -k/-m options to only match markers/test
  names/keywords respectively.  Thanks Wouter van Ackooy.

- (experimental) allow fixture functions to be 
  implemented as context managers.  Thanks Andreas Pelme,
  Vladimir Keleshev. 
